# tldr

./: LICENSE  README.md  Vagrantfile  tldr.cabal
.vagrant/machines/default/lxc/: action_provision  id  index_uuid  private_key  synced_folders
src/: Lib.hs  SimpleParser.hs  State.hs
test/: Spec.hs
