name:                tldr
version:             0.1.0.0
homepage:            https://github.com/danclien/tldr
license:             BSD3
license-file:        LICENSE
author:              Dan Lien
maintainer:          dan@danclien.com
copyright:           2017 Dan Lien
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       SimpleParser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tldr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , tldr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danclien/tldr
